tests/paczka1/fuzzy1/63413961.err
Error in line 9: 3bMgw5jW6co A593 22,0
Error in line 7: 06ECRDQdAD A226 75,3
Error in line 18: Y78JAvop S423 09,6
Error in line 26: XWFvk0a6G A151 87,6
Error in line 32: giLyUWp4cZ A151 69,4
